--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="assets/Eskah/MSN LOGO (1).png" alt="" width="120px" height="150px">
+        <img src="assets/Eskah/MSN_LOGO__2_-removebg-preview.png" alt="" width="120px" height="150px">
       </a>
 
       <nav class="navbar container" data-navbar>
@@ -68,7 +68,7 @@
           </li>
 
           <li>
-            <a href="#" class="btn btn-primary">Get Started</a>
+            <a href="#contact" class="btn btn-primary">Get Started</a>
           </li>
 
         </ul>
@@ -100,13 +100,13 @@
 
             <p class="hero-subtitle">Eskah Edge Limited</p>
 
-            <h1 class="h1 hero-title">We are available for marketing Consulting.</h1>
+            <h1 class="h1 hero-title">We are available for Marketing Consultings.</h1>
 
             <p class="hero-text">
               Eskah Edge Limited is a Comprehensive <b>Digital Marketing and Tech Consultancy firm</b>. <br> Our expert team also provides professional guidance to help you navigate the ever-evolving marketing landscape and achieve sustainable growth.
             </p>
 
-            <a href="#" class="btn btn-primary">Get Started</a>
+            <a href="#contact" class="btn btn-primary">Get Started</a>
 
           </div>
 
@@ -708,7 +708,7 @@
 
                   <h3 class="h3 card-title">Mail Here</h3>
 
-                  <a href="mailto:wanjiku@eskahedge.co.ke" class="card-link">wanjiku@eskahedge.co.ke</a>
+                  <a href="mailto:letstalk@eskah.edge.co.ke" class="card-link">letstalk@eskah.edge.co.ke</a>
                   <a href="mailto:eskahdigitalmarketing@gmail.com" class="card-link">eskahdigitalmarketing@gmail.com</a>
 
                 </div>
