--- a/index.html
+++ b/index.html
@@ -155,6 +155,14 @@
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
 
+<!-- WhatsApp Floating Button -->
+<a href="https://wa.me/254736646701" target="_blank" aria-label="Chat on WhatsApp"
+   class="fixed bottom-24 left-6 bg-[#25D366] hover:bg-[#128C7E] text-white p-4 rounded-full shadow-lg z-50 transition duration-300 ease-in-out">
+  <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="white" viewBox="0 0 32 32">
+    <path d="M16 .3A15.7 15.7 0 0 0 .3 16c0 2.8.7 5.6 2.1 8l-1.5 5.6 5.8-1.5A15.7 15.7 0 0 0 16 31.7 15.7 15.7 0 0 0 31.7 16 15.7 15.7 0 0 0 16 .3zm0 28.6a13 13 0 0 1-6.6-1.8l-.5-.3-3.9 1 1-3.8-.3-.6a13 13 0 1 1 24.3-6.5A13 13 0 0 1 16 28.9zm7.4-9.7c-.4-.2-2.5-1.2-2.8-1.3s-.6-.2-.8.2-.9 1.3-1.1 1.5-.4.2-.8.1-1.6-.6-3-1.9c-1.1-1-1.9-2.3-2.1-2.7-.2-.4 0-.6.1-.8s.3-.4.5-.6c.2-.1.3-.3.4-.5.1-.2.1-.4.1-.6s-.5-1.6-.7-2.2c-.2-.6-.4-.5-.8-.5H9.4c-.3 0-.6.1-.9.4s-1.2 1-1.2 2.5 1.2 2.9 1.3 3.1c.2.3 2.3 3.5 5.6 4.9 3.4 1.5 3.4 1 4 .9.6-.1 2-1.1 2.3-2.2.3-1 .3-1.9.2-2z"/>
+  </svg>
+</a>
+
 
   <!-- content -->
 <!-- HERO SECTION -->
@@ -182,11 +190,16 @@
       <a href="contact.html" class="bg-[#4f3c0b] text-white px-6 py-3 rounded shadow hover:bg-[#b0f254] transition duration-300">
         <b>Get Started</b>
       </a>
+      
     </div>
 
     <div class="md:w-1/2 mb-10 md:mb-0">
       <img src="./assets/images/hero-banner.png" alt="hero banner" class="w-full max-w-md mx-auto">
     </div>
+
+     
+  </div>
+</section>
 
   </div>
 </section>
