--- a/tech-solutions.html
+++ b/tech-solutions.html
@@ -626,6 +626,91 @@
 
 
 
+   <!-- Footer Start -->
+   <footer class="pt-16 pb-10 px-6 md:px-20 relative bg-gradient-to-br from-[#7b4f20] via-[#5c3712] to-[#3f260a] text-white">
+    <!-- Top CTA -->
+    <div class="max-w-7xl mx-auto mb-12 text-center">
+      <h2 class="text-3xl md:text-4xl font-bold mb-4 bg-gradient-to-r from-[#32e275] to-[#199409] bg-clip-text text-transparent">
+        Let's Elevate Your Brand
+      </h2>
+      <p class="text-lg text-gray-300 mb-6">Get in touch with Eskah Edge and unlock your business potential.</p>
+      <a href="contact.html" class="inline-block bg-[#32e275] hover:bg-[#199409] text-white py-3 px-8 rounded-lg font-semibold shadow-lg transition">
+        Contact Us
+      </a>
+    </div>
+
+    <!-- Main Footer Grid -->
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-5 gap-10">
+
+      <!-- Logo + About -->
+      <div class="md:col-span-2">
+        <img src="assets/Eskah/MSN LOGO (5).png" alt="Eskah Edge Logo" class="w-32 mb-4 rounded-lg">
+        <p class="text-gray-400 leading-relaxed">
+          We connect brands with their audience, boost their digital presence, and drive success through strategic marketing and web solutions.
+        </p>
+      </div>
+
+      <!-- Quick Links -->
+      <div>
+        <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
+        <ul class="space-y-3">
+          <li><a href="#" class="hover:text-[#32e275] transition">Home</a></li>
+          <li><a href="#" class="hover:text-[#32e275] transition">About Us</a></li>
+          <li><a href="#" class="hover:text-[#32e275] transition">Services</a></li>
+          <li><a href="#" class="hover:text-[#32e275] transition">Projects</a></li>
+          <li><a href="#" class="hover:text-[#32e275] transition">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Info -->
+      <div>
+        <h3 class="font-semibold text-lg mb-4">Contact</h3>
+        <p class="text-gray-400 mb-3"><i class="fas fa-map-marker-alt mr-2"></i> View Park Towers, Utalii Street, Nairobi, Kenya</p>
+        <p class="text-gray-400 mb-3"><i class="fas fa-envelope mr-2"></i> admin@eskahedge.co.ke</p>
+        <p class="text-gray-400 mb-3"><i class="fas fa-envelope mr-2"></i> mag@eskahedge.co.ke</p>
+        <p class="text-gray-400 mb-3"><i class="fas fa-phone-alt mr-2"></i> +254 736 646 701</p>
+        <p class="text-gray-400"><i class="fas fa-phone-alt mr-2"></i> +254 110 659 564</p>
+      </div>
+
+      <!-- Newsletter -->
+      <div>
+        <h3 class="font-semibold text-lg mb-4">Stay Updated</h3>
+        <p class="text-gray-400 mb-4">Join our newsletter for latest insights and offers.</p>
+        <form action="https://formspree.io/f/mzzgrwpp" method="POST" class="flex">
+          <input type="email" name="email" placeholder="Your email" required class="rounded-l-md px-4 py-2 w-full text-black">
+          <button type="submit" class="bg-[#32e275] hover:bg-[#199409] text-white px-5 py-2 rounded-r-md transition font-semibold">Subscribe</button>
+        </form>
+      </div>
+      
+
+    </div>
+
+    <!-- Social Icons -->
+    <div class="max-w-7xl mx-auto mt-12 flex justify-center space-x-6">
+      <a href="https://wa.me/message/NRXXU54IKBNFN1" target="_blank" aria-label="WhatsApp" class="hover:text-[#32e275] transition">
+        <i class="fab fa-whatsapp fa-2x"></i>
+      </a>
+      <a href="https://www.facebook.com/share/16DPSqfKWf/?mibextid=wwXIfr" target="_blank" aria-label="Facebook" class="hover:text-[#32e275] transition">
+        <i class="fab fa-facebook-f fa-2x"></i>
+      </a>
+      <a href="https://www.instagram.com/eskah_edge?igsh=ZzlwaHc2YWQzcGcw&utm_source=qr" target="_blank" aria-label="Instagram" class="hover:text-[#32e275] transition">
+        <i class="fab fa-instagram fa-2x"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/eskah-edge-limited-732256352?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" aria-label="LinkedIn" class="hover:text-[#32e275] transition">
+        <i class="fab fa-linkedin-in fa-2x"></i>
+      </a>
+      <a href="https://www.tiktok.com/@eskah_edge?_t=ZS-8wzW9lraFTl&_r=1" target="_blank" aria-label="TikTok" class="hover:text-[#32e275] transition">
+        <i class="fab fa-tiktok fa-2x"></i>
+      </a>
+    </div>    
+
+    <!-- Bottom -->
+    <div class="border-t border-white/20 mt-12 pt-6 text-center text-gray-500 text-sm">
+      © 2025 Eskah Edge Limited. All rights reserved.
+    </div>
+
+  </footer>
+
 
 
 
