added new images

--- a/About.HTML
+++ b/About.HTML
@@ -356,7 +356,7 @@
 </section>
 
  <!-- WHAT WE DO -->
- <section class="py-24 px-6 md:px-16 bg-gradient-to-br from-[#f9f9f9] to-[#ffffff]">
+ <section class="py-16 px-6 md:px-16 bg-gradient-to-br from-[#f9f9f9] to-[#ffffff]">
   <div class="text-center mb-20">
     <h2 class="text-5xl font-extrabold bg-clip-text text-transparent bg-gradient-to-r from-[#2ecc71] to-[#6e2c00] drop-shadow-lg">What We Do</h2>
     <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">
@@ -369,7 +369,7 @@
     <div class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-[#2ecc71] transition-transform hover:scale-105">
       <h3 class="text-xl font-bold text-[#6e2c00] mb-4">Digital Marketing, Content & Digital Media</h3>
       <p class="text-gray-700 mb-4">Grow your business with smart digital marketing that delivers results. From SEO to social campaigns, we turn clicks into clients. Let your brand shine with content that converts.</p>
-      <a href="services.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
+      <a href="marketing-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
         More <i class="fas fa-arrow-right ml-2"></i>
       </a>
     </div>
@@ -378,7 +378,7 @@
     <div class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-[#2ecc71] transition-transform hover:scale-105">
       <h3 class="text-xl font-bold text-[#6e2c00] mb-4">Web & Software Dev</h3>
       <p class="text-gray-700 mb-4">We build sleek, scalable websites and apps that power your business. Whether it’s a landing page or a full digital platform, our code delivers performance and reliability.</p>
-      <a href="services.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
+      <a href="tech-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
         More <i class="fas fa-arrow-right ml-2"></i>
       </a>
     </div>
@@ -387,7 +387,7 @@
     <div class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-[#2ecc71] transition-transform hover:scale-105">
       <h3 class="text-xl font-bold text-[#6e2c00] mb-4">Administrative Tasks</h3>
       <p class="text-gray-700 mb-4">We handle business setup, tax compliance, CRM support, proposals, personal & executive assistance — records, reports, and compliance fully sorted.</p>
-      <a href="services.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
+      <a href="admin-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
         More <i class="fas fa-arrow-right ml-2"></i>
       </a>
     </div>
@@ -395,7 +395,7 @@
 </section>
 
 <!-- OUR IMPACT -->
-<section class="py-24 bg-[#ffffff] px-6 md:px-16">
+<section class="py-14 bg-[#ffffff] px-6 md:px-16">
   <div class="text-center mb-16">
     <h2 class="text-4xl font-bold text-[#6e2c00]">Our Impact</h2>
   </div>
@@ -416,7 +416,7 @@
 </section>
 
 <!-- OUR STORY - CONTINUOUS SMOOTH SLIDING -->
-<section class="py-16 bg-[#fdfdfd] px-6 md:px-16">
+<section class="py-12 bg-[#fdfdfd] px-6 md:px-16">
   <div class="text-center mb-10 animate-[fade-in-down_1s_ease]">
     <h2 class="text-4xl font-bold text-[#6e2c00]">Our Story</h2>
   </div>
@@ -464,7 +464,7 @@
 
 
 <!-- WHY CHOOSE US -->
-<section class="py-24 bg-[#ffffff] px-6 md:px-16">
+<section class="py-14 bg-[#ffffff] px-6 md:px-16">
   <div class="text-center mb-16">
     <h2 class="text-4xl font-bold text-[#6e2c00]">Why Choose Eskah?</h2>
   </div>
@@ -513,11 +513,10 @@
       <div>
         <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
         <ul class="space-y-3">
-          <li><a href="#" class="hover:text-[#32e275] transition">Home</a></li>
-          <li><a href="#" class="hover:text-[#32e275] transition">About Us</a></li>
-          <li><a href="#" class="hover:text-[#32e275] transition">Services</a></li>
-          <li><a href="#" class="hover:text-[#32e275] transition">Projects</a></li>
-          <li><a href="#" class="hover:text-[#32e275] transition">Contact Us</a></li>
+          <li><a href="index.html" class="hover:text-[#32e275] transition">Home</a></li>
+          <li><a href="About.html" class="hover:text-[#32e275] transition">About Us</a></li>
+          <li><a href="index.html" class="hover:text-[#32e275] transition">Services</a></li>
+          <li><a href="contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
         </ul>
       </div>
 
