--- a/contact.html
+++ b/contact.html
@@ -261,11 +261,10 @@
     <div>
       <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
       <ul class="space-y-3">
-        <li><a href="#" class="hover:text-[#32e275] transition">Home</a></li>
-        <li><a href="#" class="hover:text-[#32e275] transition">About Us</a></li>
-        <li><a href="#" class="hover:text-[#32e275] transition">Services</a></li>
-        <li><a href="#" class="hover:text-[#32e275] transition">Projects</a></li>
-        <li><a href="#" class="hover:text-[#32e275] transition">Contact Us</a></li>
+        <li><a href="index.html" class="hover:text-[#32e275] transition">Home</a></li>
+        <li><a href="About.html" class="hover:text-[#32e275] transition">About Us</a></li>
+        <li><a href="index.html" class="hover:text-[#32e275] transition">Services</a></li>
+        <li><a href="contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
       </ul>
     </div>
 
