--- a/admin-solutions.html
+++ b/admin-solutions.html
@@ -139,7 +139,7 @@
             </div>
           </details>
         
-          <a href="About.html" class="block py-2 font-semibold text-[#4f3c0b]">About Us</a>
+          <a href="about.html" class="block py-2 font-semibold text-[#4f3c0b]">About Us</a>
           <a href="contact.html" class="block py-2 font-semibold text-[#4f3c0b]">Contact Us</a>
           <a href="quote.html" class="block mt-2 bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300 text-center font-semibold">Get Started</a>
         </div>
@@ -548,7 +548,7 @@
         <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
         <ul class="space-y-3">
           <li><a href="index.html" class="hover:text-[#32e275] transition">Home</a></li>
-          <li><a href="About.html" class="hover:text-[#32e275] transition">About Us</a></li>
+          <li><a href="about.html" class="hover:text-[#32e275] transition">About Us</a></li>
           <li><a href="index.html" class="hover:text-[#32e275] transition">Services</a></li>
           <li><a href="contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
         </ul>
