--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
         </details>
       </div>
   
-      <a href="About.html" class="font-semibold hover:text-[#4f3c0b]"><b>About Us</b></a>
+      <a href="about.html" class="font-semibold hover:text-[#4f3c0b]"><b>About Us</b></a>
       <a href="contact.html" class="font-semibold hover:text-[#4f3c0b]"><b>Contact Us</b></a>
       <a href="quote.html" class="bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300"><b>Get Started</b></a>
     </nav>
@@ -262,7 +262,7 @@
       <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
       <ul class="space-y-3">
         <li><a href="index.html" class="hover:text-[#32e275] transition">Home</a></li>
-        <li><a href="About.html" class="hover:text-[#32e275] transition">About Us</a></li>
+        <li><a href="about.html" class="hover:text-[#32e275] transition">About Us</a></li>
         <li><a href="index.html" class="hover:text-[#32e275] transition">Services</a></li>
         <li><a href="contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
       </ul>
