Fix vercel.json format

--- a/more.html
+++ b/more.html
@@ -83,13 +83,13 @@
   <!-- MAIN NAVBAR -->
   <div class="container mx-auto flex justify-between items-center py-4 px-4">
     <!-- Logo -->
-    <a href="index.html">
+    <a href="/index.html">
       <img src="assets/Eskah/MSN LOGO (5).png" alt="Eskah Edge Logo" class="w-28 h-auto">
     </a>
   
     <!-- Desktop Nav Links -->
     <nav class="hidden md:flex space-x-8 items-center">
-      <a href="index.html" class="font-semibold hover:text-[#4f3c0b]"><b>Home</b></a>
+      <a href="/index.html" class="font-semibold hover:text-[#4f3c0b]"><b>Home</b></a>
   
       <!-- Services Dropdown (Responsive + Tailwind Only) -->
       <div class="relative">
@@ -101,17 +101,17 @@
             </svg>
           </summary>
           <div class="absolute left-0 bg-white shadow-lg rounded-lg py-2 mt-2 z-50 w-48 border border-[#ccc]">
-            <a href="tech-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Tech Solutions</b></a>
-            <a href="marketing-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Marketing Solutions</b></a>
-            <a href="admin-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Admin Solutions</b></a>
+            <a href="/tech-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Tech Solutions</b></a>
+            <a href="/marketing-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Marketing Solutions</b></a>
+            <a href="/admin-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Admin Solutions</b></a>
           </div>
         </details>
       </div>
   
       <a href="more.html
 " class="font-semibold hover:text-[#4f3c0b]"><b>About Us</b></a>
-      <a href="contact.html" class="font-semibold hover:text-[#4f3c0b]"><b>Contact Us</b></a>
-      <a href="quote.html" class="bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300"><b>Get Started</b></a>
+      <a href="/contact.html" class="font-semibold hover:text-[#4f3c0b]"><b>Contact Us</b></a>
+      <a href="/quote.html" class="bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300"><b>Get Started</b></a>
     </nav>
   
     <!-- Mobile Hamburger -->
@@ -126,22 +126,22 @@
   
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-white shadow px-4 py-4">
-    <a href="index.html" class="block py-2 font-semibold text-[#4f3c0b]">Home</a>
+    <a href="/index.html" class="block py-2 font-semibold text-[#4f3c0b]">Home</a>
     
     <!-- Services Dropdown for Mobile -->
     <details class="block py-2 text-[#4f3c0b]">
       <summary class="cursor-pointer font-semibold">Services</summary>
       <div class="pl-4 mt-2 space-y-1">
-        <a href="tech-solutions.html" class="block hover:text-[#804A00]">Tech Solutions</a>
-        <a href="marketing-solutions.html" class="block hover:text-[#804A00]">Marketing Solutions</a>
-        <a href="admin-solutions.html" class="block hover:text-[#804A00]">Admin Solutions</a>
+        <a href="/tech-solutions.html" class="block hover:text-[#804A00]">Tech Solutions</a>
+        <a href="/marketing-solutions.html" class="block hover:text-[#804A00]">Marketing Solutions</a>
+        <a href="/admin-solutions.html" class="block hover:text-[#804A00]">Admin Solutions</a>
       </div>
     </details>
   
     <a href="more.html
 " class="block py-2 font-semibold text-[#4f3c0b]">About Us</a>
-    <a href="contact.html" class="block py-2 font-semibold text-[#4f3c0b]">Contact Us</a>
-    <a href="quote.html" class="block mt-2 bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300 text-center font-semibold">Get Started</a>
+    <a href="/contact.html" class="block py-2 font-semibold text-[#4f3c0b]">Contact Us</a>
+    <a href="/quote.html" class="block mt-2 bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300 text-center font-semibold">Get Started</a>
   </div>
   
   <!-- Simple JS for toggling mobile menu -->
@@ -181,7 +181,7 @@
       </p>
   
       <div class="mt-8">
-        <a href="quote.html" class="inline-block bg-gradient-to-r from-[#32e275] to-[#8C6239] text-white font-semibold px-8 py-3 rounded-full shadow-lg hover:scale-105 transition-transform duration-300">
+        <a href="/quote.html" class="inline-block bg-gradient-to-r from-[#32e275] to-[#8C6239] text-white font-semibold px-8 py-3 rounded-full shadow-lg hover:scale-105 transition-transform duration-300">
           Get a Quote
         </a>
       </div>
@@ -377,7 +377,7 @@
     <div class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-[#2ecc71] transition-transform hover:scale-105">
       <h3 class="text-xl font-bold text-[#6e2c00] mb-4">Digital Marketing, Content & Digital Media</h3>
       <p class="text-gray-700 mb-4">Grow your business with smart digital marketing that delivers results. From SEO to social campaigns, we turn clicks into clients. Let your brand shine with content that converts.</p>
-      <a href="marketing-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
+      <a href="/marketing-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
         More <i class="fas fa-arrow-right ml-2"></i>
       </a>
     </div>
@@ -386,7 +386,7 @@
     <div class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-[#2ecc71] transition-transform hover:scale-105">
       <h3 class="text-xl font-bold text-[#6e2c00] mb-4">Web & Software Dev</h3>
       <p class="text-gray-700 mb-4">We build sleek, scalable websites and apps that power your business. Whether it’s a landing page or a full digital platform, our code delivers performance and reliability.</p>
-      <a href="tech-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
+      <a href="/tech-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
         More <i class="fas fa-arrow-right ml-2"></i>
       </a>
     </div>
@@ -395,7 +395,7 @@
     <div class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-[#2ecc71] transition-transform hover:scale-105">
       <h3 class="text-xl font-bold text-[#6e2c00] mb-4">Administrative Tasks</h3>
       <p class="text-gray-700 mb-4">We handle business setup, tax compliance, CRM support, proposals, personal & executive assistance — records, reports, and compliance fully sorted.</p>
-      <a href="admin-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
+      <a href="/admin-solutions.html" class="text-[#2ecc71] font-bold flex items-center hover:text-[#6e2c00]">
         More <i class="fas fa-arrow-right ml-2"></i>
       </a>
     </div>
@@ -501,7 +501,7 @@
         Let's Elevate Your Brand
       </h2>
       <p class="text-lg text-gray-300 mb-6">Get in touch with Eskah Edge and unlock your business potential.</p>
-      <a href="contact.html" class="inline-block bg-[#32e275] hover:bg-[#199409] text-white py-3 px-8 rounded-lg font-semibold shadow-lg transition">
+      <a href="/contact.html" class="inline-block bg-[#32e275] hover:bg-[#199409] text-white py-3 px-8 rounded-lg font-semibold shadow-lg transition">
         Contact Us
       </a>
     </div>
@@ -521,11 +521,11 @@
       <div>
         <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
         <ul class="space-y-3">
-          <li><a href="index.html" class="hover:text-[#32e275] transition">Home</a></li>
+          <li><a href="/index.html" class="hover:text-[#32e275] transition">Home</a></li>
           <li><a href="more.html
 " class="hover:text-[#32e275] transition">About Us</a></li>
-          <li><a href="index.html" class="hover:text-[#32e275] transition">Services</a></li>
-          <li><a href="contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
+          <li><a href="/index.html" class="hover:text-[#32e275] transition">Services</a></li>
+          <li><a href="/contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
         </ul>
       </div>
 
