--- a/contact.html
+++ b/contact.html
@@ -82,13 +82,13 @@
   <!-- MAIN NAVBAR -->
   <div class="container mx-auto flex justify-between items-center py-4 px-4">
     <!-- Logo -->
-    <a href="index.html">
+    <a href="/index.html">
       <img src="assets/Eskah/MSN LOGO (5).png" alt="Eskah Edge Logo" class="w-28 h-auto">
     </a>
   
     <!-- Desktop Nav Links -->
     <nav class="hidden md:flex space-x-8 items-center">
-      <a href="index.html" class="font-semibold hover:text-[#4f3c0b]"><b>Home</b></a>
+      <a href="/index.html" class="font-semibold hover:text-[#4f3c0b]"><b>Home</b></a>
   
       <!-- Services Dropdown (Responsive + Tailwind Only) -->
       <div class="relative">
@@ -100,17 +100,17 @@
             </svg>
           </summary>
           <div class="absolute left-0 bg-white shadow-lg rounded-lg py-2 mt-2 z-50 w-48 border border-[#ccc]">
-            <a href="tech-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Tech Solutions</b></a>
-            <a href="marketing-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Marketing Solutions</b></a>
-            <a href="admin-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Admin Solutions</b></a>
+            <a href="/tech-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Tech Solutions</b></a>
+            <a href="/marketing-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Marketing Solutions</b></a>
+            <a href="/admin-solutions.html" class="block px-4 py-2 text-[#4f3c0b] hover:bg-[#f4f4f4] hover:text-[#804A00] transition"><b>Admin Solutions</b></a>
           </div>
         </details>
       </div>
   
       <a href="more.html
 " class="font-semibold hover:text-[#4f3c0b]"><b>About Us</b></a>
-      <a href="contact.html" class="font-semibold hover:text-[#4f3c0b]"><b>Contact Us</b></a>
-      <a href="quote.html" class="bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300"><b>Get Started</b></a>
+      <a href="/contact.html" class="font-semibold hover:text-[#4f3c0b]"><b>Contact Us</b></a>
+      <a href="/quote.html" class="bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300"><b>Get Started</b></a>
     </nav>
   
     <!-- Mobile Hamburger -->
@@ -125,22 +125,22 @@
   
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-white shadow px-4 py-4">
-    <a href="index.html" class="block py-2 font-semibold text-[#4f3c0b]">Home</a>
+    <a href="/index.html" class="block py-2 font-semibold text-[#4f3c0b]">Home</a>
     
     <!-- Services Dropdown for Mobile -->
     <details class="block py-2 text-[#4f3c0b]">
       <summary class="cursor-pointer font-semibold">Services</summary>
       <div class="pl-4 mt-2 space-y-1">
-        <a href="tech-solutions.html" class="block hover:text-[#804A00]">Tech Solutions</a>
-        <a href="marketing-solutions.html" class="block hover:text-[#804A00]">Marketing Solutions</a>
-        <a href="admin-solutions.html" class="block hover:text-[#804A00]">Admin Solutions</a>
+        <a href="/tech-solutions.html" class="block hover:text-[#804A00]">Tech Solutions</a>
+        <a href="/marketing-solutions.html" class="block hover:text-[#804A00]">Marketing Solutions</a>
+        <a href="/admin-solutions.html" class="block hover:text-[#804A00]">Admin Solutions</a>
       </div>
     </details>
   
     <a href="more.html
 " class="block py-2 font-semibold text-[#4f3c0b]">About Us</a>
-    <a href="contact.html" class="block py-2 font-semibold text-[#4f3c0b]">Contact Us</a>
-    <a href="quote.html" class="block mt-2 bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300 text-center font-semibold">Get Started</a>
+    <a href="/contact.html" class="block py-2 font-semibold text-[#4f3c0b]">Contact Us</a>
+    <a href="/quote.html" class="block mt-2 bg-[#4f3c0b] text-white px-4 py-2 rounded hover:bg-[#b0f254] transition-colors duration-300 text-center font-semibold">Get Started</a>
   </div>
   
   <!-- Simple JS for toggling mobile menu -->
@@ -243,7 +243,7 @@
       Let's Elevate Your Brand
     </h2>
     <p class="text-lg text-gray-300 mb-6">Get in touch with Eskah Edge and unlock your business potential.</p>
-    <a href="contact.html" class="inline-block bg-[#32e275] hover:bg-[#199409] text-white py-3 px-8 rounded-lg font-semibold shadow-lg transition">
+    <a href="/contact.html" class="inline-block bg-[#32e275] hover:bg-[#199409] text-white py-3 px-8 rounded-lg font-semibold shadow-lg transition">
       Contact Us
     </a>
   </div>
@@ -263,11 +263,11 @@
     <div>
       <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
       <ul class="space-y-3">
-        <li><a href="index.html" class="hover:text-[#32e275] transition">Home</a></li>
+        <li><a href="/index.html" class="hover:text-[#32e275] transition">Home</a></li>
         <li><a href="more.html
 " class="hover:text-[#32e275] transition">About Us</a></li>
-        <li><a href="index.html" class="hover:text-[#32e275] transition">Services</a></li>
-        <li><a href="contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
+        <li><a href="/index.html" class="hover:text-[#32e275] transition">Services</a></li>
+        <li><a href="/contact.html" class="hover:text-[#32e275] transition">Contact Us</a></li>
       </ul>
     </div>
 
