Fix vercel.json format

--- a/quote/index.html
+++ b/quote/index.html
@@ -3,8 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Request a Quote | Eskah Solutions</title>
+  <title>Request a Quote | Eskah Edge Limited</title>
+
+  <!-- Meta Tags -->
+  <meta name="description" content="Get a custom quote from Eskah Edge Limited for digital marketing, website development, admin support, and branding services." />
+  <meta name="keywords" content="Eskah Edge, request quote, digital solutions, web development, admin support, branding Kenya" />
+  <meta name="author" content="Eskah Edge Limited" />
+  <meta property="og:title" content="Request a Quote | Eskah Edge Limited" />
+  <meta property="og:description" content="Let us help you with tailored digital solutions. Get your custom quote today!" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.eskah.co.ke/quote" />
+  <meta property="og:image" content="https://www.eskah.co.ke/assets/Eskah/MSN%20LOGO%20(5).png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Tailwind CSS v2 -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+
+  <!-- Custom Styles -->
   <style>
     :root {
       --eskah-green: #88b73b;
@@ -27,19 +42,19 @@
 
 <body class="bg-gray-50 text-gray-900 font-sans">
 
+  <!-- QUOTE FORM SECTION -->
   <section class="max-w-3xl mx-auto p-8 mt-16 bg-white rounded-3xl shadow-lg relative">
-
     <!-- Eskah Logo Watermark -->
     <div class="pointer-events-none absolute inset-0 flex justify-center items-center">
-      <img src="assets/Eskah/MSN LOGO (5).png" alt="Eskah Solutions Logo" class="opacity-10 max-w-xs" />
+      <img src="/assets/Eskah/MSN LOGO (5).png" alt="Eskah Solutions Logo" class="opacity-10 max-w-xs" />
     </div>
 
     <!-- Logo Header -->
     <div class="relative z-10 flex justify-center mb-8">
-      <img src="assets/Eskah/MSN LOGO (5).png" alt="Eskah Solutions Logo" class="h-20 w-auto object-contain" />
+      <img src="/assets/Eskah/MSN LOGO (5).png" alt="Eskah Solutions Logo" class="h-20 w-auto object-contain" />
     </div>
 
-    <h1 class="text-4xl font-extrabold mb-6 text-center text-eskah-green" style="color: var(--eskah-green);">
+    <h1 class="text-4xl font-extrabold mb-6 text-center" style="color: var(--eskah-green);">
       Request a Custom Quote
     </h1>
 
@@ -48,8 +63,7 @@
     </p>
 
     <!-- FORM (Formspree) -->
-    <form action="https://formspree.io/f/mzzgrwpp" method="POST" class="space-y-8">
-
+    <form id="quote-form" action="https://formspree.io/f/mzzgrwpp" method="POST" class="space-y-8">
       <div>
         <label for="name" class="block text-lg font-semibold mb-2">Full Name</label>
         <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded-xl px-5 py-3 text-lg" />
@@ -78,24 +92,39 @@
         <textarea id="message" name="message" rows="5" class="w-full border border-gray-300 rounded-xl px-5 py-3 text-lg"></textarea>
       </div>
 
-      <div class="text-center">
-        <button type="submit" class="btn-eskah text-white font-extrabold px-12 py-4 rounded-full text-xl shadow-md">
+      <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mt-6">
+        <button type="submit" class="btn-eskah text-white font-extrabold px-10 py-3 rounded-full text-lg shadow-md">
           Get My Quote
         </button>
+        <a href="/index.html" class="btn-eskah text-white font-extrabold px-6 py-3 rounded-full text-lg shadow-md">
+          ⬅ Go Back
+        </a>
       </div>
-
+      "
     </form>
 
     <!-- Success message -->
-    <div id="success-message" class="hidden text-green-600 text-center mt-6 font-bold text-lg">
+    <div id="success-message" class="hidden text-green-600 text-center mt-10 font-bold text-lg">
       ✅ Your quote request has been sent successfully!
+      <div class="mt-4">
+        <a href="/" class="inline-block bg-[#4f3c0b] text-white px-6 py-2 rounded-full shadow hover:bg-[#23bd08] transition duration-300">
+          ⬅ Go Back Home
+        </a>
+      </div>
     </div>
-
   </section>
 
-  <!-- Simple JS for Form Submission -->
+  <!-- Floating WhatsApp Button -->
+  <a href="https://wa.me/254736646701" target="_blank"
+     class="fixed bottom-6 right-6 z-50 bg-green-600 text-white p-4 rounded-full shadow-lg transform hover:scale-110 transition duration-300">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 32 32" fill="white">
+      <path d="M16 .3A15.7 15.7 0 0 0 .3 16c0 2.8.7 5.6 2.1 8l-1.5 5.6 5.8-1.5A15.7 15.7 0 0 0 16 31.7 15.7 15.7 0 0 0 31.7 16 15.7 15.7 0 0 0 16 .3z"/>
+    </svg>
+  </a>
+
+  <!-- Form Handling Script -->
   <script>
-    const form = document.querySelector("form");
+    const form = document.getElementById("quote-form");
     const successMessage = document.getElementById("success-message");
 
     form.addEventListener("submit", function(e) {
@@ -104,17 +133,16 @@
       fetch(form.action, {
         method: "POST",
         body: data,
-        headers: {
-          'Accept': 'application/json'
-        }
+        headers: { 'Accept': 'application/json' }
       }).then(response => {
         if (response.ok) {
           form.reset();
           successMessage.classList.remove("hidden");
+          window.scrollTo({ top: 0, behavior: 'smooth' });
         } else {
           alert("Failed to send. Please try again later.");
         }
-      }).catch(error => {
+      }).catch(() => {
         alert("An error occurred. Try again later.");
       });
     });
@@ -122,4 +150,3 @@
 
 </body>
 </html>
-
