Fix vercel.json format

--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eskah Edge Limited- We're available for marketing</title>
   <!-- Primary Meta Tags -->
-<meta name="title" content="Eskah Edge Limited — Strategic Digital & Admin Growth">
-<meta name="description" content="Eskah Edge helps startups and SMEs grow with tailored marketing, branding, tech, and admin solutions in Kenya and beyond.">
+<!-- Primary Meta Tags -->
+<title>Eskah Edge — All-in-One Business, Marketing & Tech Solutions</title>
+<meta name="title" content="Eskah Edge — All-in-One Business, Marketing & Tech Solutions">
+<meta name="description" content="We help brands build, launch, and scale — with admin, tech, and digital marketing done for you.">
 
-<!-- Open Graph / Facebook -->
+<!-- Open Graph / Facebook / WhatsApp / Instagram -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.eskahedge.co.ke/">
-<meta property="og:title" content="Eskah Edge Limited — Strategic Digital & Admin Growth">
-<meta property="og:description" content="Helping startups and SMEs thrive through smart marketing, creative branding, tech solutions, and reliable admin support.">
-<meta property="og:image" content="https://www.eskahedge.co.ke/assets/Eskah/meta-image.jpg">
+<meta property="og:title" content="Eskah Edge — All-in-One Business, Marketing & Tech Solutions">
+<meta property="og:description" content="Start or grow your brand with our powerful blend of business registration, web design, social media, and digital strategy.">
+<meta property="og:image" content="https://www.eskahedge.co.ke/assets/eskah%20egge.co.ke.jpg">
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://www.eskahedge.co.ke/">
-<meta property="twitter:title" content="Eskah Edge Limited — Strategic Digital & Admin Growth">
-<meta property="twitter:description" content="Tailored digital growth for ambitious businesses — marketing, tech & admin done right.">
-<meta property="twitter:image" content="https://www.eskahedge.co.ke/assets/Eskah/meta-image.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://www.eskahedge.co.ke/">
+<meta name="twitter:title" content="Eskah Edge — All-in-One Business, Marketing & Tech Solutions">
+<meta name="twitter:description" content="From business setup to branding, tech, and social — we offer full-stack growth solutions for Kenyan entrepreneurs.">
+<meta name="twitter:image" content="https://www.eskahedge.co.ke/assets/eskah%20egge.co.ke.jpg">
+
 
 <!-- Canonical Tag -->
 <link rel="canonical" href="https://www.eskahedge.co.ke/" />
